
2017-08-10  Edward Hart <edward.dan.hart@gmail.com>

	* cobc.c (cobc_clean_up): added calls to (plex_clear_all) and
	  (ylex_clear_all), fixing bug #407.

2017-08-09  Edward Hart <edward.dan.hart@gmail.com>

	* config.c (cb_config_entry): removed extraneous free (bug #409).
	* config.c (cb_config_entry): fixed indentation.

2017-08-07  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c, typeck.c, tree.h: adjusted and included
	  Patch #27 by Wim Niemans 2016-06-13 for FR #100 as PENDING
	* field.c, tree.c: adjustments for EXTERNAL-FORM
	* cobc.c, error.c, parser.y, typeck.c: msgid specific changes

2017-08-07  Edward Hart <edward.dan.hart@gmail.com>

	* typeck.c: moved RELATIVE KEY validating code to
	  (validate_relative_key), called in (cb_validate_program_data).
	* typeck.c (validate_relative_key): altered to check key is not the
	  associated file's records and improved category check.
	* parser.y: added check that correct KEY clause is used with
	  RELATIVE/INDEXED files (bug #405).

2017-07-29  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (system_name_table): added switches USW-0 thru USW-31.
	* field.c (validate_field_1): added warning for useless FULL clause on
	  numeric items.
	* parser.y (error_stmt_recover): removed ELSE from list of verbs,
	  preventing recursion on syntax error in IF statements (bug #403).

2017-07-27  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* reserved.c: fixed bug #402 - optional WITH clause functional
	* parser.y, reserved.c: FR #78 more phrases for DISPLAY WINDOW
	* parser.y, typeck.c: FR #77 fixed HANDLE references
	* parser.y, reserved.c: FR #190 minimal support for DISPLAY MESSAGE BOX
	* parser.y, typeck.c: fixed SIGSEGV in cobc for DISPLAY OMITTED

2017-07-26  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* parser.y, reserved.c: added clauses COLOR and SIZE as PENDING
	* parser.y: added ACCEPT FROM SCREEN as PENDING
